welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value ifWeekend
if (ifWeekend==false & (cigars<=60 & cigars>=40)){
    ^cigarParty:5: error: not found: value ifWeekend
if (ifWeekend==true & cigars>=40){
    ^