welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
if (ifWeekend==false & (cigars<=60 & cigars>=40)){
	return true
}
if (ifWeekend==true & cigars>=40){
	return true
}
else return false 
}
